<resources>
    <string name="app_name">Tichu Counter</string>
    <!-- Text to display Team A [CHAR LIMIT=10] -->
    <string name="team_a_text">Team A</string>
    <!-- Text to display Team B [CHAR LIMIT=10] -->
    <string name="team_b_text">Team B</string>
    <!-- Display Score Views -->
    <string name="zero_score_text">0</string>
    <!-- Display EditScore Views default value -->
    <string name="add_score_text">Add score&#8230;</string>
    <!-- Display Buttons default values -->
    <string name="go_text">Go</string>
    <string name="plus_100_text">+100</string>
    <string name="minus_100_text">-100</string>
    <string name="number_1_text">1</string>
    <string name="number_2_text">2</string>
    <string name="number_3_text">3</string>
    <string name="number_4_text">4</string>
    <string name="number_5_text">5</string>
    <string name="number_6_text">6</string>
    <string name="number_7_text">7</string>
    <string name="number_8_text">8</string>
    <string name="number_9_text">9</string>
    <string name="number_0_text">0</string>
    <string name="symbol_minus_text">-</string>
    <string name="del_button_text">DEL</string>
    <string name="reset_button_text">Reset</string>
    <string name="set_teams_button_text">Set\nTeams</string>
    <string name="reset_teams_button_text">Reset\nTeams</string>
    <!-- Font Path Name Used in TypeFace -->
    <string name="font_path">chinesetakeaway.ttf</string>
</resources>
